--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                             <li><a class="page-scroll" href="#about-section">biodata</a></li>
                             <li><a class="page-scroll" href="#services-section">deskripsi</a></li>
                             <li><a class="page-scroll" href="#contact-section">lesson learn</a></li>
+                            <li><a class="page-scroll" href="scrappraka.html">Web Scrapping</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                   </div><!-- /.container -->
